fix(css): blog post title: truncate a not h3
Do not truncate article title.
Do truncate the link within.
So user can see focus UI.

--- a/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.blog.app.item.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.blog.app.item.css
@@ -102,9 +102,11 @@ Styleguide Components.DjangoCMS.Blog.App.Item
   margin-block: unset; /* overwrite html-elements.css */
   font-size: var(--global-font-size--large);
 }
+:--article-item h3 a, /* truncate a not h3 so :focus-visible is not cropped */
 :--article-item h4 {
   @extend %x-truncate--one-line;
-
+}
+:--article-item h4 {
   text-transform: none; /* overwrite html-elements.css */
 
   /* To style subtitle differently than title */
